# ArcticInference

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  fix_health_monitor.py  fix_health_monitor2.py  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yaml  ci.yaml  docs.yaml
arctic_inference/: envs.py  lamport_vllm_custom_allreduce.py  patching.py  py_custom_ops.py  utils.py
arctic_inference/common/dynasor/: api_serve.py  cot.py  entropy.py  evaluator.py  serving_chat.py  serving_completion.py
arctic_inference/common/suffix_cache/: __init__.py  simulator.py  suffix_cache.py
arctic_inference/dynasor/: api_serve.py  cot.py  entropy.py  evaluator.py  openai_server.py  serving_chat.py  serving_completion.py  vllm_server.py
arctic_inference/embedding/: README.md  client.py  replica.py  replica_manager.py
arctic_inference/grpc/: README.md  client.py  generate_proto.py  replica.py  replica_manager.py  requirements.txt
arctic_inference/grpc/proto/: inference.proto
arctic_inference/op_builder/: __init__.py  builder.py  moe_ops.py  swiftkv_ops_builder.py
arctic_inference/server/: __init__.py  api.py  cli.py  config.py  driver.py  metrics.py  multi_model.py  pipeline.py  replica_manager.py  replica_pool.py  scheduler.py  testing.py  worker.py
arctic_inference/server/weight_sync/: __init__.py  engine.py  ipc_engine.py  receiver.py  schedule.py  sender.py  utils.py
arctic_inference/suffix_decoding/: __init__.py  cache.py  simulator.py
arctic_inference/vllm/: args.py  compilation.py  config.py  fp32_lm_head.py  model_runner.py  patches.py  plugin.py  plugins.py  scheduler.py  shapeshifter.py  shift_parallel.py  spec_decoding.py  stats.py  structured_output.py  ulysses.py
arctic_inference/vllm/arctic_spec/: arctic_proposer.py  arctic_speculator.py  logits_processor_opt.py
arctic_inference/vllm/attention/: README.md  __init__.py  flash_attn_forest_cascade.py
arctic_inference/vllm/kvcached/: __init__.py  patches.py  prefix_block_pool.py
arctic_inference/vllm/moe/: __init__.py  routing.py
arctic_inference/vllm/moe_optimization/: fused_experts.py  layer.py
arctic_inference/vllm/rope/: __init__.py  multi_cache_ntk.py  patches.py
arctic_inference/vllm/spec_dec/: arctic_proposer.py  arctic_speculator.py  fp8.py  logits_processor_opt.py  vocab_parallel_embedding.py  w4a8.py
arctic_inference/vllm/swiftkv/: linear.py  llama_swiftkv copy.py  llama_swiftkv.py
benchmark/: README.md  benchmark.py  benchmark_http.py  run_benchmark.sh
benchmark/embedding/: README.md  benchmark.py  run_benchmark.sh
benchmark/reproducibility/: README.md  client.sh  plot.py  read_trace.py  readme.md  server.sh  test.jsonl  vibe_test.py
benchmark/reproducibility/patches_v0.10.1/: datasets.py  serve.py
benchmark/rollout/: README.md  parallel_sampling.patch  patch_sampling.sh  sampling_params.patch
benchmark/trace/: README.md  apply_vllm_bench_patch_v10p1.sh  example_trace.jsonl  run_client.sh
csrc/custom_ops/: CMakeLists.txt  allreduce_kernels.cu  allreduce_kernels.h  allreduce_ops.cpp  custom_ops.h  dispatch_utils.h  dtype_common.cuh  fill_neg_zeros.cu  ipc_minimal.cpp  ipc_minimal.h  kernels.cu  lamport_allreduce_bindings.cpp  lamport_allreduce_bindings.h  lamport_allreduce_kernels.cu  lamport_allreduce_kernels.h  nvfp4_scaled_mm_kernels.cu  quant_utils.cuh  reshape_and_cache_flash_bulk.cu  reshape_and_cache_flash_fp4.cu  speculator_ln.cu  sum_lstm.cu  torch_bindings.cpp  vectorization.cuh  vectorization_utils.cuh
csrc/moe_ops/: conversion_utils.h  kernel_utils.h  memory_access_utils.h  moe_apis.cpp  reduction_utils.h  topk_router.cpp  topk_router.cu  topk_router.cuh  topk_router.h  topk_utils.h
csrc/suffix_cache/: CMakeLists.txt  int32_map.h  pybind.cc  suffix_tree.cc  suffix_tree.h
csrc/suffix_decoding/: CMakeLists.txt  bindings.cc  int32_map.h  pybind.cc  suffix_tree.cc  suffix_tree.h
docs/: arctic-speculator.rst  arctic-ulysses.rst  embeddings.rst  index.rst  install.rst  quick-start.rst  shift-parallel.rst  shift.rst  spec-decode.rst  suffix-decoding.rst  swiftkv.rst  ulysses.rst  version_compatibility.md
projects/dynasor/: README.md  api_serve.py  chat.py  naive_client.py  openai_client.py  openai_client_2.py  openai_proxy.py  requirements.txt  serving_chat.py  vllm_client.py
projects/dynasor/examples/: vllm_client.py
projects/server/: README.md  api_example.sh  driver_example.py  driver_example_scaling.py  kvcached_multimodel_example.py  pipeline_example.py
projects/spec_dec/: README.md  offline_inference_spec_dec.py
projects/swiftkv/: offline_inference_swiftkv.py
projects/ulysses/: README.md  offline_inference_ulysses.py
tests/: test_benchmarks.py  test_custom_ops.py  test_e2e.py  test_patching.py
tests/benchmarks/: benchmark_utils.py  conftest.py  example_config_override.yaml  result  rl_bench_8192  rl_bench_b200  rl_bench_b200_llama_8b  rl_bench_b200_qwen_4b  rl_bench_b200_qwen_8b  test_benchmarks.py
tests/benchmarks/json_mode/: evaluate_text_json_mode.py  utils.py
tests/json-mode/: config.py  evaluate_text_json_mode.py  task_description.py  utils.py
tests/json_mode/: evaluate_text_json_mode.py  task_description.py  test_evaluation.py  utils.py
tests/unit_tests/: test_arctic_spec_max_len.py  test_fp32_lm_head.py  test_kvcached_prefix_caching.py  test_lamport_allreduce.py  test_multi_cache_rope.py  test_prefix_block_pool_unit.py  test_reshape_and_cache_flash_nvfp4.py  test_scheduler_prefix_routing.py  test_spec_dec_sleep.py  test_spec_weight_sync.py  test_speculator_ln.py  test_sum_lstm.py  test_ulysses_config.py
tests/weight_sync/: benchmark_weight_sync.py  test_direct_param_writer.py  test_parallel_weight_sync.py
