[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "nanobind==2.9.2",
    # uv pip install vllm==0.9.1 --dry-run 2>&1 | grep protobuf | sed 's/^ + //'
    "protobuf==5.29.5",
    "grpcio-tools",
    "torch==2.8.0", # need to be same as user env.
]
build-backend = "setuptools.build_meta"

[project]
name = "arctic_inference"
version = "0.1.1"
description = "Snowflake LLM inference library"

[project.entry-points."vllm.general_plugins"]
arctic_inference = "arctic_inference.vllm.plugin:arctic_inference_plugin"

[tool.setuptools]
packages = [
    "arctic_inference",
    "arctic_inference.common",
    "arctic_inference.common.swiftkv",
    "arctic_inference.dynasor",
    "arctic_inference.op_builder",
    "arctic_inference.suffix_decoding",
    "arctic_inference.vllm",
    "arctic_inference.vllm.swiftkv",
    "arctic_inference.vllm.spec_dec",
    "arctic_inference.embedding",
    "arctic_inference.csrc",
]

[tool.setuptools.package-dir]
"arctic_inference.csrc" = "csrc"

[tool.setuptools.package-data]
"arctic_inference.embedding" = ["arctic_inference/embedding/proto/*.proto"]

[project.optional-dependencies]
vllm = [
    'vllm==0.11.0',
]

docs = [
    "sphinx>=8.1.3",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]

test = [
    "lm_eval[api,ifeval]==0.4.8",
    "pandas",
    "pytest",
    "sentence_transformers"
]

embedding = [
    "vllm==0.9.2",
    # uv pip install vllm==0.9.2 --dry-run 2>&1 | grep protobuf | sed 's/^ + //'
    "protobuf==5.29.5",
]

dynasor = [
    "rich",
    "prompt_toolkit",
    "pydantic",
    "datasets",
    "latex2sympy2",
    "transformers",
    "word2number",
]

dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "E731",   # do not assign a lambda expression
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B011"]      # allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
